--- a/index.html
+++ b/index.html
@@ -1,11 +1,109 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8"/>
-  <title>Web dev</title>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>About me</title>
 
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-</head>
-<body>
-It works.
-</body>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous">
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.0/css/academicons.min.css"
+    rel="stylesheet">
+    <meta name="viewport" content="width=device-width">
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="aboutme">Dimitris Dimou</h1>
+        <img src="assets/me.png" style="width:100%;border-radius:10%;
+        box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)" alt="me">
+        <br> 
+        <p>PhD candidate at the
+        <a href="https://welcome.isr.tecnico.ulisboa.pt/">Institute for Systems and Robotics</a> 
+        working on dexterous robots.
+        </p>
+
+        <p align="center">
+        <b><em>Try not! Do. Or do not. There is no try.</em></b>
+        <br> <br> 
+        <!-- e-mail &nbsp;: &nbsp; --> 
+        mijuomij at gmail.com
+        </p>
+        <ul>
+          <li><a href="https://github.com/el-cangrejo"><div class="contact-icon github"><i class="fa fa-github fa-2x" aria-hidden="true"></i></div></a></li>
+          <li><a href="https://scholar.google.com/citations?user=G9lcsWAAAAAJ&hl=en"><div class="fa scholar"><i class="ai ai-google-scholar ai-2x"></i></div>
+          <li><a href="https://twitter.com/_el_cangrejo"><div class="contact-icon twitter"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></div></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>About</h1>
+        <p align="justify" style="font-size:12pt;color:black;">
+          I am a PhD candidate at the 
+          <a href="https://vislab.isr.tecnico.ulisboa.pt/">Computer and Robot Vision Laboratory (VisLab)</a>,
+          part of the <a href="https://welcome.isr.tecnico.ulisboa.pt/">Institute for Systems and Robotics</a> 
+          in Lisbon. My thesis focuses on the application of generative models for grasping and manipulation 
+          with dexterous hands.
+          Before that, I completed an integrated MSc in Electrical and Computer Engineering at the  
+          <a href="https://www.ece.upatras.gr/index.php/en/">University of Patras</a>, where I did my
+          <a href="https://www.youtube.com/watch?v=Dc3Je49o9Js">thesis</a> in the 
+          <a href="https://www.vvr.ece.upatras.gr/">Visualization & Virtual Reality Group</a>.
+          My interests mostly lie at the intersection of robotics, machine learning, and computer vision. 
+          You can find some of my projects below. 
+        </p>
+        <h1>Education</h2>
+        <div class="header">
+              <div class="titleCol" style="color:black;">Ph.D. in Robotics</div>
+              <div class="dateCol" style="color:black;">2019-present</div>
+              <div class="contCol" style="color:black;">Instituto Superior Tecnico, University of
+                Lisbon, Lisbon</div>
+              <div class="contCol" style="color:black;">Advisors: <a
+                  href="http://users.isr.ist.utl.pt/~plinio/">Plinio
+                  Moreno</a> and
+                  <a href="http://users.isr.ist.utl.pt/~jasv/">José Santos-Victor</a>
+              </div>
+            </div>
+            <br>
+            <div class="header">
+              <div class="titleCol" style="color:black;">Integrated M.Sc. in Electrical and Computer
+                Engineering</div>
+              <div class="dateCol" style="color:black;">2011-2018</div>
+              <div class="contCol" style="color:black;">University of Patras, Greece</div>
+              <div class="contCol" style="color:black;">Advisor: <a
+                  href="https://www.vvr.ece.upatras.gr/members/konstantinos-moustakas/">Konstantinos Moustakas</a>
+              </div>
+        </div>
+        <br>
+
+        <h1>Research Projects</h1>
+        <h2>Thesis:</h3>
+
+        <h3><a href="project_synergies.html">Conditional Postural Synergies I : Representations</a></h3>
+        <h3><a href="project_force.html">Conditional Postural Synergies II : Tactile Control</a></h3>
+        <h3><a href="project_grasp.html">Conditional Postural Synergies III : Grasp Pose Sampling</a></h3>
+
+
+        <h2>Misc:</h3>
+        <h3><a href="project_repair.html">RePair Project (Horizon 2020)</a></h3>
+        <h3><a href="project_teleop.html">Vision-based Teleoperation</a></h3>
+        <h3><a href="project_flows.html">Normalizing Flows for Motion Planning</a></h3>
+        <!-- <h3><a href="project_llms.html">LLMs for Robotic Manipulation</a></h3> -->
+
+        <img src="assets/unnamed.gif" alt="me" align="center" border=2
+        style="margin:auto;width:40%;border-radius:20%;border-style:inset;border-color:#435560;">
+
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a
+            href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+  </body>
 </html>
+
