--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <div class="wrapper">
       <header>
         <h1 class="aboutme">Dimitris Dimou</h1>
-        <img src="assets/me.png" style="width:100%;border-radius:10%;
+        <img src="assets/me.JPG" style="width:100%;border-radius:50%;
         box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)" alt="me">
+        <br> 
         <br> 
         <p>PhD candidate at the
         <a href="https://welcome.isr.tecnico.ulisboa.pt/">Institute for Systems and Robotics</a> 
