Add random quote

--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
         working on dexterous robots.
         </p>
 
+        <div class="quote_container"> 
+          <div class="quote_text" id="quoteText"></div>
+            <img src="assets/yoda.png">
+        </div>
+        <br>
+
         <p align="center">
-        <b><em>Try not! Do. Or do not. There is no try.</em></b>
-        <br> <br> 
         <!-- e-mail &nbsp;: &nbsp; --> 
         mijuomij at gmail.com
         </p>
@@ -105,6 +109,7 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+    <script src="javascripts/index.js"></script>
   </body>
 </html>
 
