Add LLMs for Robotic Manipulation project

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h3><a href="project_repair.html">RePair Project (Horizon 2020)</a></h3>
         <h3><a href="project_teleop.html">Vision-based Teleoperation</a></h3>
         <h3><a href="project_flows.html">Normalizing Flows for Motion Planning</a></h3>
-        <!-- <h3><a href="project_llms.html">LLMs for Robotic Manipulation</a></h3> -->
+        <h3><a href="project_llms.html">LLMs for Robotic Manipulation</a></h3>
 
         <img src="assets/unnamed.gif" alt="me" align="center" border=2
         style="margin:auto;width:40%;border-radius:20%;border-style:inset;border-color:#435560;">
