--- a/project_flows.html
+++ b/project_flows.html
@@ -472,7 +472,7 @@
     <i class="fa fa-chevron-up fa-fw"></i>
   </button> 
 
-  <button onclick="parent.location='project_repair.html'" id="nextBtn" class="button" title="Go to next">
+  <button onclick="parent.location='project_llms.html'" id="nextBtn" class="button" title="Go to next">
     <i class="fa fa-chevron-right fa-fw"></i>
   </button> 
 
