--- a/project_repair.html
+++ b/project_repair.html
@@ -190,7 +190,7 @@
   <a href="https://arxiv.org/abs/2301.00866">"3DSGrasp: 3D Shape-Completion for Robotic Grasp."</a>
   ICRA, 2023.
   
-  <button onclick="parent.location='project_flows.html'" id="prevBtn"
+  <button onclick="parent.location='project_llms.html'" id="prevBtn"
     class="button" title="Go to previous">
     <i class="fa fa-chevron-left fa-fw"></i>
   </button> 
