--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)" alt="me">
         <br> 
         <br> 
-        <p>PhD candidate at the
-        <a href="https://welcome.isr.tecnico.ulisboa.pt/">Institute for Systems and Robotics</a> 
-        working on dexterous robots.
+        <p style="text-align: center">
+          Robotics Engineer @ <a href="https://www.qsys.com/">QSC</a>
         </p>
 
         <div class="quote_container"> 
@@ -47,7 +46,7 @@
 
         <p align="center">
         <!-- e-mail &nbsp;: &nbsp; --> 
-        mijuomij at gmail.com
+        mijuomij @ gmail.com
         </p>
         <ul>
           <li><a href="https://github.com/el-cangrejo"><div class="contact-icon github"><i class="fa fa-github fa-2x" aria-hidden="true"></i></div></a></li>
@@ -58,22 +57,32 @@
       <section>
         <h1>About</h1>
         <p align="justify" style="font-size:12pt;color:black;">
-          I am a PhD candidate at the 
+          I’m a Robotics Engineer at <a href="https://www.qsys.com/">QSC</a>, 
+          working in the Intelligent AV department.  There, I’m part of the Video
+          Experience team, developing 
+          <a href="https://www.qsys.com/products/q-sys/video/q-sys-visionsuite/">VisionSuite</a> 
+          — a platform that combines computer vision, AI, and robotic control to enhance
+          the next generation of intelligent audiovisual systems.
+
+          Previously, I completed my 
+          <a href="https://scholar.tecnico.ulisboa.pt/records/CPzTkmMAPwHX6xVKN95i02wjfqzkpH-T9mm4">PhD</a> 
+          at the
           <a href="https://vislab.isr.tecnico.ulisboa.pt/">Computer and Robot Vision Laboratory (VisLab)</a>,
-          part of the <a href="https://welcome.isr.tecnico.ulisboa.pt/">Institute for Systems and Robotics</a> 
-          in Lisbon. My thesis focuses on the application of generative models for grasping and manipulation 
-          with dexterous hands.
-          Before that, I completed an integrated MSc in Electrical and Computer Engineering at the  
-          <a href="https://www.ece.upatras.gr/index.php/en/">University of Patras</a>, where I did my
-          <a href="https://www.youtube.com/watch?v=Dc3Je49o9Js">thesis</a> in the 
+          part of the <a href="https://welcome.isr.tecnico.ulisboa.pt/">Institute for Systems and Robotics</a> in Lisbon.
+          My research focused on applying generative models to dexterous grasping and manipulation.
+
+          Before that, I earned an integrated MSc in Electrical and Computer Engineering from the
+          <a href="https://www.ece.upatras.gr/index.php/en/">University of Patras</a>,
+          where I completed my <a href="https://www.youtube.com/watch?v=Dc3Je49o9Js">thesis</a> in the
           <a href="https://www.vvr.ece.upatras.gr/">Visualization & Virtual Reality Group</a>.
-          My interests mostly lie at the intersection of robotics, machine learning, and computer vision. 
-          You can find some of my projects below. 
+
+          My interests lie broadly at the intersection of robotics, machine learning, and computer vision.
+          You can find some of my projects below.
         </p>
         <h1>Education</h2>
         <div class="header">
               <div class="titleCol" style="color:black;">Ph.D. in Robotics</div>
-              <div class="dateCol" style="color:black;">2019-present</div>
+              <div class="dateCol" style="color:black;">2019-2025</div>
               <div class="contCol" style="color:black;">Instituto Superior Tecnico, University of
                 Lisbon, Lisbon</div>
               <div class="contCol" style="color:black;">Advisors: <a
